# alpha-os

./: .gitignore  AGENTS.md  DESIGN.md  EVALUATION_PIPELINE.md  OLD_DESIGN.md  OPERATING_BOUNDARIES.md  PREDICTION_TARGETS.md  README.md  RECOVERY.md  ROADMAP.md  TRADING_UNIVERSE_DESIGN.md  plan.md  pyproject.toml
config/: default.toml  dev.toml
deploy/: alpha-os-admission@.service  alpha-os-alpha-generator@.service  alpha-os-paper-runtime@.service  alpha-os-paper-runtime@.timer  alpha-os-paper-trade@.service  alpha-os-produce-predictions@.service  alpha-os-refresh-deployed-alphas@.service  alpha-os-refresh-deployed-alphas@.timer  alpha-os-refresh-universe@.service  alpha-os-refresh-universe@.timer  alpha-os-runtime-status@.service  alpha-os-sync-signal-cache@.service  alpha-os.service  alpha-os@.service
docs/: README.md  portfolio-runtime-principles.md  system-diagram.html
experiments/: active_cap_window.toml  champion_challenger.toml  deployment_expansion.toml  deployment_plateau.toml  deployment_upper_window.toml  deployment_window.toml  observation_window.toml
scripts/: analyze_niches.py  backtest_compare.py  backtest_cross_sectional.py  check_deprecations.sh  diagnose_universe.py  e2e_forward_test.py  e2e_test.py  generate_boost.py  run_handcrafted_baseline_replay.py  run_live.sh  run_schedule.sh  run_trade.sh  sweep_lifecycle_thresholds.py
tests/: conftest.py  replay_matrix_fixture.toml  test_admission_replay.py  test_allocation_policy.py  test_alpaca_executor.py  test_alpha.py  test_alpha_generator.py  test_alpha_os_build.py  test_alpha_os_meta_model.py  (+65 more)
(+252 files in other folders)
