[project]
name = "alpha-os"
version = "0.1.0"
description = "Agentic Alpha OS — autonomous alpha generation, selection, and trading"
requires-python = ">=3.12"
dependencies = [
    "numpy>=1.26",
    "pandas>=2.0",
    "requests>=2.28",
    "scipy>=1.12",
    "deap>=1.4",
    "ribs[all]>=0.7",
    "ccxt>=4.0",
    "signal-noise",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=1.0",
    "ruff>=0.4",
]
polymarket = [
    "py-clob-client>=0.17",
    "web3>=6.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "current: tests for hypotheses-first runtime and maintained paths",
    "research: tests for offline experiments, replay, and lab helpers",
    "legacy: tests for registry-era substrate and compatibility paths",
]

[tool.ruff]
target-version = "py312"
line-length = 100
